--- a/Examples/FoleysSynth/CMakeLists.txt
+++ b/Examples/FoleysSynth/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.13.0)
 
-project("FoleysSynth" VERSION ${version})
+project("FoleysSynth" VERSION ${FGM_VERSION})
 
 set(${PROJECT_NAME}_sources
     Source/FoleysSynth.cpp
