--- a/Examples/ExtendingExample/CMakeLists.txt
+++ b/Examples/ExtendingExample/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.13.0)
 
-project("ExtendingExample" VERSION ${version})
+project("ExtendingExample" VERSION ${FGM_VERSION})
 
 set(${PROJECT_NAME}_sources
     Source/PluginProcessor.cpp
