fixed the "No test cases found" error

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,18 +18,11 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Create Build Environment
-        run: cmake -E make_directory ${{runner.workspace}}/build
-
       - name: Configure CMake
-        shell: bash
-        working-directory: ${{runner.workspace}}/build
-        run: cmake $GITHUB_WORKSPACE -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+        run: cmake --preset maintainer
 
       - name: Build
-        working-directory: ${{runner.workspace}}/build
-        shell: bash
-        run: cmake --build . --config $BUILD_TYPE
+        run: cmake --build --preset maintainer --config ${{ env.BUILD_TYPE }}
 
       - name: Run tests
-        run: ctest --preset default -C ${{ env.BUILD_TYPE }} --output-on-failure -j 4
+        run: ctest --preset maintainer -j 4 -C ${{ env.BUILD_TYPE }}
