--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,12 @@
 name: CMake
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - 'main'
+      - 'develop'
+      - 'next-generation'
+  pull_request: {}
 
 env:
   BUILD_TYPE: Release
