--- a/Examples/SignalGenerator/CMakeLists.txt
+++ b/Examples/SignalGenerator/CMakeLists.txt
@@ -64,7 +64,4 @@ foreach(FORMAT ${FORMATS})
     add_custom_command(TARGET ${PROJECT_NAME}_${FORMAT} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${ARTEFACTS_DIR} ${COPY_FOLDER})
 endforeach()
 
-if(FOLEYS_RUN_PLUGINVAL)
-    pgm_add_pluginval_tests (SignalGenerator 
-        TEST_BASE_NAME foleys_gui_magic.examples.SignalGenerator.pluginval)
-endif()
+__pgm_internal_add_pluginval_tests (${PROJECT_NAME})
