Added ubuntu build

--- a/Examples/ExtendingExample/CMakeLists.txt
+++ b/Examples/ExtendingExample/CMakeLists.txt
@@ -56,6 +56,7 @@ target_compile_definitions(${PROJECT_NAME}
     FOLEYS_SHOW_GUI_EDITOR_PALLETTE=1
     FOLEYS_SAVE_EDITED_GUI_IN_PLUGIN_STATE=0
     JUCE_VST3_CAN_REPLACE_VST2=0
+    JUCE_USE_CURL=0
     JUCE_WEB_BROWSER=0)
 
 foreach(FORMAT ${FORMATS})
