disabling post-build gather steps for now

--- a/Examples/EqualizerExample/CMakeLists.txt
+++ b/Examples/EqualizerExample/CMakeLists.txt
@@ -62,9 +62,9 @@ target_compile_definitions(${PROJECT_NAME}
     JUCE_USE_CURL=0
     JUCE_WEB_BROWSER=0)
 
-foreach(FORMAT ${FORMATS})
-    get_target_property(ARTEFACTS_DIR ${PROJECT_NAME}_${FORMAT} LIBRARY_OUTPUT_DIRECTORY)
-    add_custom_command(TARGET ${PROJECT_NAME}_${FORMAT} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${ARTEFACTS_DIR} ${COPY_FOLDER})
-endforeach()
+# foreach(FORMAT ${FORMATS})
+#     get_target_property(ARTEFACTS_DIR ${PROJECT_NAME}_${FORMAT} LIBRARY_OUTPUT_DIRECTORY)
+#     add_custom_command(TARGET ${PROJECT_NAME}_${FORMAT} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${ARTEFACTS_DIR} ${COPY_FOLDER})
+# endforeach()
 
 __pgm_internal_add_pluginval_tests (${PROJECT_NAME})
