installing gtk on Linux

--- a/Examples/ExtendingExample/CMakeLists.txt
+++ b/Examples/ExtendingExample/CMakeLists.txt
@@ -20,7 +20,9 @@ juce_add_plugin(${PROJECT_NAME}
                 COMPANY_EMAIL "info@foleysfinest.com"
                 BUNDLE_ID "com.foleysfinest.EqualizerExample"
                 PLUGIN_NAME "PGM-Extending"
-                PRODUCT_NAME "PGM-Extending")
+                PRODUCT_NAME "PGM-Extending"
+                NEEDS_WEB_BROWSER FALSE
+                NEEDS_CURL FALSE)
 
 juce_add_binary_data(${PROJECT_NAME}_data
     SOURCES
