--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,8 @@ jobs:
           libx11-dev libxcomposite-dev libxcursor-dev libxcursor-dev libxext-dev \
           libxinerama-dev libxrandr-dev libxrender-dev \
           libwebkit2gtk-4.0-dev \
-          libglu1-mesa-dev mesa-common-dev
+          libglu1-mesa-dev mesa-common-dev \
+          libgtk-3-dev libwebkit2gtk-4.0-dev
 
       - name: Install pluginval
         id: pluginval
