--- a/Examples/FoleysSynth/CMakeLists.txt
+++ b/Examples/FoleysSynth/CMakeLists.txt
@@ -25,7 +25,9 @@ juce_add_plugin(${PROJECT_NAME}
                 COMPANY_EMAIL "info@foleysfinest.com"
                 BUNDLE_ID "com.foleysfinest.FoleysSynth"
                 PLUGIN_NAME "PGM-FoleysSynth"
-                PRODUCT_NAME "PGM-FoleysSynth")
+                PRODUCT_NAME "PGM-FoleysSynth"
+                NEEDS_WEB_BROWSER FALSE
+                NEEDS_CURL FALSE)
 
 juce_add_binary_data(${PROJECT_NAME}_data
     SOURCES
