added CMakeLists.txt for PlayerExample

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -45,4 +45,4 @@ add_subdirectory(EqualizerExample)
 add_subdirectory(ExtendingExample)
 add_subdirectory(FoleysSynth)
 add_subdirectory(SignalGenerator)
-# add_subdirectory(PlayerExample)
+add_subdirectory(PlayerExample)
