--- a/Examples/PlayerExample/CMakeLists.txt
+++ b/Examples/PlayerExample/CMakeLists.txt
@@ -49,4 +49,5 @@ target_compile_definitions(${PROJECT_NAME}
         FOLEYS_ENABLE_BINARY_DATA=1
         FOLEYS_SHOW_GUI_EDITOR_PALLETTE=1
         FOLEYS_SAVE_EDITED_GUI_IN_PLUGIN_STATE=0
-        JUCE_WEB_BROWSER=0)
+        JUCE_WEB_BROWSER=0
+        JUCE_USE_CURL=0)
