Added a Vanilla plugin as minimal test

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -76,4 +76,5 @@ add_subdirectory(EqualizerExample)
 add_subdirectory(ExtendingExample)
 add_subdirectory(FoleysSynth)
 add_subdirectory(SignalGenerator)
+add_subdirectory(Vanilla)
 add_subdirectory(PlayerExample)
