Added unit test for dynamic view hiding

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -11,83 +11,88 @@ test the installation process. Defaults to off.
 
 ]]
 
-cmake_minimum_required (VERSION 3.15 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
 
-project (FoleysGUIMagicTests
-         VERSION ${FGM_VERSION}
-         DESCRIPTION "Unit tests for the foleys_gui_magic JUCE module"
-         HOMEPAGE_URL "https://foleysfinest.com/developer/pluginguimagic/"
-         LANGUAGES CXX)
+project(FoleysGUIMagicTests
+        VERSION ${FGM_VERSION}
+        DESCRIPTION "Unit tests for the foleys_gui_magic JUCE module"
+        HOMEPAGE_URL "https://foleysfinest.com/developer/pluginguimagic/"
+        LANGUAGES CXX)
 
 enable_testing()
 
 # cmake-format: off
 # building command-line tools for iOS isn't supported by Apple's SDKs
 if (IOS
-	OR ("${CMAKE_SYSTEM_NAME}" STREQUAL iOS)
-	OR ("${CMAKE_SYSTEM_NAME}" STREQUAL tvOS)
-	OR ("${CMAKE_SYSTEM_NAME}" STREQUAL watchOS))
-	
-	if(PROJECT_IS_TOP_LEVEL)
-		message (FATAL_ERROR "Building command-line tools for iOS isn't supported by Apple's SDKs;
-			the foleys_gui_magic unit test executable cannot be crosscompiled for iOS")
-	endif()
+        OR ("${CMAKE_SYSTEM_NAME}" STREQUAL iOS)
+        OR ("${CMAKE_SYSTEM_NAME}" STREQUAL tvOS)
+        OR ("${CMAKE_SYSTEM_NAME}" STREQUAL watchOS))
 
-	return ()
+    if (PROJECT_IS_TOP_LEVEL)
+        message(FATAL_ERROR "Building command-line tools for iOS isn't supported by Apple's SDKs;
+			the foleys_gui_magic unit test executable cannot be crosscompiled for iOS")
+    endif ()
+
+    return()
 endif ()
 # cmake-format: on
 
-option (FGM_TEST_INSTALL 
-		"Build the tests against a system install of foleys_gui_magic, instead of the copy in this repo"
-		"${PROJECT_IS_TOP_LEVEL}")
+option(FGM_TEST_INSTALL
+        "Build the tests against a system install of foleys_gui_magic, instead of the copy in this repo"
+        "${PROJECT_IS_TOP_LEVEL}")
 
 if (FGM_TEST_INSTALL OR PROJECT_IS_TOP_LEVEL)
-	set (CMAKE_FIND_PACKAGE_PREFER_CONFIG ON)
+    set(CMAKE_FIND_PACKAGE_PREFER_CONFIG ON)
 
-	find_package (foleys_gui_magic "${PROJECT_VERSION}" EXACT REQUIRED CONFIG)
+    find_package(foleys_gui_magic "${PROJECT_VERSION}" EXACT REQUIRED CONFIG)
 endif ()
 
-include (FetchContent)
+include(FetchContent)
 
-FetchContent_Declare (Catch2 
-					  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
-					  GIT_TAG origin/devel)
+FetchContent_Declare(Catch2
+        GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+        GIT_TAG origin/devel)
 
-FetchContent_MakeAvailable (Catch2)
+FetchContent_MakeAvailable(Catch2)
 
-if(catch2_SOURCE_DIR)
-    list (APPEND CMAKE_MODULE_PATH "${catch2_SOURCE_DIR}/extras")
-endif()
+if (catch2_SOURCE_DIR)
+    list(APPEND CMAKE_MODULE_PATH "${catch2_SOURCE_DIR}/extras")
+endif ()
 
-include (Catch)
+include(Catch)
 
-juce_add_console_app (FoleysGUIMagicTests VERSION ${FOLEYS_VERSION}
-		BUNDLE_ID "com.foleysfinest.foleys_gui_magic.tests")
+juce_add_console_app(FoleysGUIMagicTests VERSION ${FOLEYS_VERSION}
+        BUNDLE_ID "com.foleysfinest.foleys_gui_magic.tests")
 
-target_sources (FoleysGUIMagicTests PRIVATE 
-					foleys_MagicProcessorTests.cpp 
-					foleys_GuiTreeTests.cpp
-					foleys_TestProcessors.h)
+target_sources(FoleysGUIMagicTests PRIVATE
+        foleys_MagicBuilderTests.cpp
+        foleys_MagicProcessorTests.cpp
+        foleys_GuiTreeTests.cpp
+        foleys_TestProcessors.h)
 
-set_target_properties (
-	FoleysGUIMagicTests
-	PROPERTIES LABELS "foleys_gui_magic;Tests" 
-			   FOLDER foleys_gui_magic 
-			   EchoString "Building the foleys_gui_magic unit test runner..."
-			   MACOSX_BUNDLE OFF)
+set_target_properties(
+        FoleysGUIMagicTests
+        PROPERTIES LABELS "foleys_gui_magic;Tests"
+        FOLDER foleys_gui_magic
+        EchoString "Building the foleys_gui_magic unit test runner..."
+        MACOSX_BUNDLE OFF)
 
-target_link_libraries (FoleysGUIMagicTests PRIVATE 
-							Catch2::Catch2WithMain 
-							foleys::foleys_gui_magic)
+target_link_libraries(FoleysGUIMagicTests PRIVATE
+        Catch2::Catch2WithMain
+        foleys::foleys_gui_magic)
 
-catch_discover_tests (
-    FoleysGUIMagicTests
-    TEST_PREFIX foleys_gui_magic.
-    EXTRA_ARGS
-    	--warn NoAssertions
-    	--order rand
-    	--verbosity high
-    PROPERTIES
-    	SKIP_REGULAR_EXPRESSION "SKIPPED:"
-    	FAIL_REGULAR_EXPRESSION "FAILED:"
+target_compile_definitions(FoleysGUIMagicTests
+        PUBLIC
+        JUCE_MODAL_LOOPS_PERMITTED=1)
+
+catch_discover_tests(
+        FoleysGUIMagicTests
+        TEST_PREFIX foleys_gui_magic.
+        EXTRA_ARGS
+        --warn NoAssertions
+        --order rand
+        --verbosity high
+        PROPERTIES
+        SKIP_REGULAR_EXPRESSION "SKIPPED:"
+        FAIL_REGULAR_EXPRESSION "FAILED:"
 )
