--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -1,3 +1,6 @@
 
 # add modules to juce. You need to list it in `target_link_libraries` too
-juce_add_modules (foleys_gui_magic ALIAS_NAMESPACE foleys)
+juce_add_modules(
+        foleys_gui_magic
+        foleys_dsp_magic
+        ALIAS_NAMESPACE foleys)
