--- a/Examples/EqualizerExample/CMakeLists.txt
+++ b/Examples/EqualizerExample/CMakeLists.txt
@@ -59,6 +59,7 @@ target_compile_definitions(${PROJECT_NAME}
     FOLEYS_SAVE_EDITED_GUI_IN_PLUGIN_STATE=0
     FOLEYS_ENABLE_BINARY_DATA=1
     JUCE_VST3_CAN_REPLACE_VST2=0
+    JUCE_SILENCE_XCODE_15_LINKER_WARNING=1
     JUCE_WEB_BROWSER=0)
 
 foreach(FORMAT ${FORMATS})
