--- a/Examples/SignalGenerator/CMakeLists.txt
+++ b/Examples/SignalGenerator/CMakeLists.txt
@@ -57,6 +57,7 @@ target_compile_definitions(${PROJECT_NAME}
     FOLEYS_SHOW_GUI_EDITOR_PALLETTE=1
     FOLEYS_SAVE_EDITED_GUI_IN_PLUGIN_STATE=0
     JUCE_VST3_CAN_REPLACE_VST2=0
+    JUCE_SILENCE_XCODE_15_LINKER_WARNING=1
     JUCE_WEB_BROWSER=0)
 
 foreach(FORMAT ${FORMATS})
